add Test Cases/main/demo

--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,56 @@
 plugins {
   id 'java'
+  id 'groovy'
+  id 'com.github.johnrengelman.shadow' version '4.0.4'
   id "com.katalon.gradle-plugin" version "0.0.7"
 }
 
+group = 'com.kazurayam'
+version = '0.1.0'
+
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
+ext {
+    groovyVersion = '2.4.7'
+}
+
+configurations {
+    generateDocs
+}
+
 repositories {
-  mavenCentral()
+    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-  // sample dependencies
-  // rest-assured
-  // compile 'io.rest-assured:rest-assured:3.2.0'
-  // JsonPath
-  // compile 'io.rest-assured:json-path:3.2.0'
-  // XmlPath
-  // compile 'io.rest-assured:json-path:3.2.0'
-  // JSON Schema Validation
-  // compile 'io.rest-assured:json-schema-validator:3.2.0'
+    generateDocs "org.codehaus.groovy:groovy-all:${groovyVersion}"
 }
+
+sourceSets {
+    main {
+        groovy {
+            srcDirs = ['Keywords']
+        }
+    }
+}
+
+katalon {
+    dependencyPrefix = "com.kazurayam"
+    minimize = false
+}
+
+task groovydoc(type: Groovydoc, overwrite:true) {
+    source = sourceSets.main.groovy
+    classpath = configurations.compile
+    groovyClasspath = project.configurations.generateDocs
+    include 'com/kazurayam/junit4ks/*'
+    exclude '**/*Test.groovy'
+}
+task publishGroovydoc(type: Copy) {
+    from 'build/docs/groovydoc'
+    into 'docs/api'
+}
+
+groovydoc.finalizedBy publishGroovydoc
